--- a/index1.html
+++ b/index1.html
@@ -31,6 +31,18 @@ textarea { width: 250px; height: 100px; border: solid 1px #CCCCCC; }
   <td colspan="2" align="center"><strong>Отправка запроса</strong></td>
  </tr>
  <tr>
+  <td width="150">Имя :</td>
+  <td><input type="text" name="test_name" maxlength="30" /></td>
+ </tr>
+ <tr>
+  <td width="150">E-Mail :</td>
+  <td><input type="text" name="test_mail" maxlength="30" /></td>
+ </tr>
+ <tr>
+  <td width="150">Тема сообщения :</td>
+  <td><input type="text" name="test_theme" maxlength="30" /></td>
+ </tr>
+ <tr>
   <td width="150">Сообщение :</td>
   <td><textarea name="test_mess"></textarea></td>
  </tr>
