--- a/main.html
+++ b/main.html
@@ -168,7 +168,7 @@ mysql_close();
 </p>
 </div>
 <div class="clr">
-<img src="images/3.png" class="zv" width="50px" height="50px"><p class="MR">© Минестерстово обороны Республики Казахстан<br>
+<img src="images/3.png" class="zv" width="50px" height="50px"><p class="MR">© Министерстово Обороны Республики Казахстан<br>
 Все права защищены</p>
 <p class="lo" align="right" valign="right">Разработка-Logytex</p>
 </div>
