--- a/index.html
+++ b/index.html
@@ -1,73 +1,30 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
- 
+﻿<!DOCTYPE html>
+<html>
 <head>
- 
-    <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
- 
-    <title>Форма с сохранением в MySQL</title>
- 
-<style type="text/css">
-<!--
-body { font: 12px Georgia; color: #666666; }
-h3 { font-size: 16px; text-align: center; }
-table { width: 400px; border-collapse: collapse; margin: 0px auto; background: #E6E6E6; }
-td { padding: 3px; }
-input { width: 250px; border: solid 1px #CCCCCC; }
-textarea { width: 250px; height: 100px; border: solid 1px #CCCCCC; }
-.buttons { width: auto; border: double 1px #666666; background: #D6D6D6; }
--->
-</style>
- 
-</head>
+    <title>Админка для сайта</title>
+ 	<link href='css/css.css' rel='stylesheet'>
+ </head>
  
 <body>
- 
-<h3>Пример формы с сохранением данных в MySQL</h3>
- 
+<div id="vse">
+
+ <div id="content">
 <form action="save_form.php" method="post" name="test_form">
-<table border="1" cellpadding="0" cellspacing="0">
- <tr>
-  <td colspan="2" align="center"><strong>Отправка запроса</strong></td>
- </tr>
- <tr>
-  <td width="150">Сообщение :</td>
-  <td><textarea name="test_mess"></textarea></td>
- </tr>
- <tr>
-  <td colspan="2" align="center">
-   <input type="submit" class="buttons" value="Отправить запрос" />
-   <input type="reset" class="buttons" value="Очистить" />
-  </td>
- </tr>
-</table>
-</form>
+  <textarea autofocus rows="30" cols="140" name="test_mess"></textarea><br/>
+   <div id="otpr">
+     <input type="submit" class="buttons" value="Добавить" />
+     <input type="reset" class="buttons" value="Очистить" />
+   </div>
+   </form>
+ </div>
  
- 
- 
-<form action="view_data.php" method="post" name="view_result">
-<table>
- <tr>
-  <td align="center"><input type="submit" class="buttons" value="Посмотреть ранее сохраненные данные" /></td>
- </tr>
-</table>
-</form>
- 
-<form action="del_data.php" method="post" name="delete_data">
-<table>
- <tr>
-  <td align="center"><input type="submit" class="buttons" value="Удаление данных" /></td>
- </tr>
-</table>
-</form>
- 
-<form action="update_data.php" method="post" name="update_data">
-<table>
- <tr>
-  <td align="center"><input type="submit" class="buttons" value="Редактирование и обновление данных" /></td>
- </tr>
-</table>
-</form>
- 
+<div id="navig" >
+	<ul>
+		<li><a href="view_data.php">Посмотреть страницу</a></li>
+		<li><a href="del_data.php?del">Удаление содержимого </a></li>
+		<li><a href="update_data.php">Редактирование данных </a></li>
+	</ul>
+</div>
+</div>
 </body>
 </html>
